# TNNN

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  chk  cmake_install.cmake
data/: test1  ubuntu_22.04_graphviz-12.2.0-cmake.deb  ubuntu_22.04_graphviz-12.2.0-cmake.deb:Zone.Identifier
docs/: Accuracy.xlsx  Classes.vsdx
html/: graph_legend.html  index.html  md_README.html  pages.html
html/search/: all_0.js  pages_0.js
include/: brain.h  clock_circular_buffer.h  common.h  eyes_optics.h  input_output.h  mnist_reader.hpp  mnist_reader_common.hpp  mnist_set.h  tracer.h  tread_safe_queue.h
latex/: md_README.tex  refman.tex
networks/: net.out  weigths.out
src/: brain.cpp  clock_circular_buffer.cpp  input_output.cpp  mnist_set.cpp  test.cpp  tracer.cpp
